--- a/index.html
+++ b/index.html
@@ -1,29 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meu Site</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nanabi.art</title>
 </head>
 <body>
-  <header>
-    <h1>Bem-vindo ao meu site</h1>
-    <nav>
-      <ul>
-        <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#contato">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section>
-    <h2>Veja o Layout do Site</h2>
-    <iframe src="https://drive.google.com/file/d/14FPqLH9c8FSLty4B2PwgPDId39nD-EEN/preview" width="100%" height="600px"></iframe>
-  </section>
-
-  <footer>
-    <p>Entre em contato comigo!</p>
-  </footer>
+    <h1>Bem-vindo ao meu site!</h1>
+    <p>Em breve, mais novidades.</p>
 </body>
 </html>
 
