--- a/index.html
+++ b/index.html
@@ -8,6 +8,5 @@
 <body>
     <h1>Bem-vindo ao meu site!</h1>
     <p>Em breve, mais novidades.</p>
-     <p>https://open.spotify.com/playlist/1hQNzn1QYQK2DvzVRvBsbA?si=d264100933ea43a2</p>
-</body>
+</body>https://open.spotify.com/playlist/1hQNzn1QYQK2DvzVRvBsbA?si=dd61093f405c4919</body>
 </html>
